--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@ https://templatemo.com/tm-569-edu-meeting
               <li><a href="#"><i class="fa fa-facebook"></i></a></li>
               <li><a href="#"><i class="fa fa-twitter"></i></a></li>
               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-              <li><a href="#"><i class="fa fa-youtube"></i></a></li>
+              <li><a href="https://www.youtube.com/channel/UCDcLqbliVgO9fQLl0alBoQw"><i class="fa fa-youtube"></i></a>
+              </li>
             </ul>
           </div>
         </div>
